[package]
name = "wgpu_pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22"
log = "0.4"
env_logger = "0.11"
pollster = "0.4.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
