[package]
name = "wgpu_pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = "22"
log = "0.4"
env_logger = "0.11"
pollster = "0.4.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
anyhow = "1.0.92"
image = "0.25.4"
cgmath = "0.18.0"
lazy_static = "1.5.0"
derive_builder = "0.20.2"
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
bevy_ecs = "0.14.2"
tiny_bail = "0.4.3"
rand = "0.8.5"

[dependencies.gltf]
version = "1.4"
features = ["extras", "names"]
